Create multiple task saving endpoint, Fix completing task sql query github actions use Dockerfile.jlink